# FNAFWorldEngine

./: CMakeLists.txt  README.md
include/rendering/: texture_manager.hpp  window.hpp
include/util/: Screen.hpp  Singleton.hpp
src/: main.cpp
src/rendering/: texture_manager.cpp  window.cpp
